# libav-cpp

./: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
av/: BSF.hpp  Decoder.hpp  Encoder.hpp  Frame.hpp  InputFormat.hpp  OptSetter.hpp  OutputFormat.hpp  Packet.hpp  Rational.hpp  Resample.hpp  Scale.hpp  Stream.hpp  StreamReader.hpp  StreamWriter.hpp  VideoCapture.hpp  common.hpp
examples/: CMakeLists.txt  transcode.cpp
