include_directories(../)

function(findFFMpegNonDefault)
    set(FFMPEG_ROOT /home/greg/libsources/FFmpeg/release)
    #set(FFMPEG_ROOT /usr/include/x86_64-linux-gnu)
    set(AVUTIL_INCLUDE_DIRS "${FFMPEG_ROOT}/include")
    set(AVUTIL_LIBRARY_DIRS "${FFMPEG_ROOT}/lib")
    set(AVCODEC_INCLUDE_DIRS "${FFMPEG_ROOT}/include")
    set(AVCODEC_LIBRARY_DIRS "${FFMPEG_ROOT}/lib")
    set(AVFORMAT_INCLUDE_DIRS "${FFMPEG_ROOT}/include")
    set(AVFORMAT_LIBRARY_DIRS "${FFMPEG_ROOT}/lib")
    set(SWSCALE_INCLUDE_DIRS "${FFMPEG_ROOT}/include")
    set(SWSCALE_LIBRARY_DIRS "${FFMPEG_ROOT}/lib")
    set(SWRESAMPLE_INCLUDE_DIRS "${FFMPEG_ROOT}/include")
    set(SWRESAMPLE_LIBRARY_DIRS "${FFMPEG_ROOT}/lib")
    set(AVRESAMPLE_INCLUDE_DIRS "${FFMPEG_ROOT}/include")
    set(AVRESAMPLE_LIBRARY_DIRS "${FFMPEG_ROOT}/lib")

    # avcodec
    find_path(AVCODEC_INCLUDE_DIR libavcodec/avcodec.h PATHS ${AVCODEC_INCLUDE_DIRS} NO_DEFAULT_PATH)
    find_library(AVCODEC_LIBRARY avcodec PATHS ${AVCODEC_LIBRARY_DIRS} NO_DEFAULT_PATH)

    # avformat
    find_path(AVFORMAT_INCLUDE_DIR libavformat/avformat.h PATHS ${AVFORMAT_INCLUDE_DIRS} NO_DEFAULT_PATH)
    find_library(AVFORMAT_LIBRARY avformat PATHS ${AVFORMAT_LIBRARY_DIRS} NO_DEFAULT_PATH)

    # avutil
    find_path(AVUTIL_INCLUDE_DIR libavutil/avutil.h PATHS ${AVUTIL_INCLUDE_DIRS} NO_DEFAULT_PATH)
    find_library(AVUTIL_LIBRARY avutil PATHS ${AVUTIL_LIBRARY_DIRS} NO_DEFAULT_PATH)

    # swscale
    find_path(SWSCALE_INCLUDE_DIR libswscale/swscale.h PATHS ${SWSCALE_INCLUDE_DIRS} NO_DEFAULT_PATH)
    find_library(SWSCALE_LIBRARY swscale PATHS ${SWSCALE_LIBRARY_DIRS} NO_DEFAULT_PATH)

    # swresample
    find_path(SWRESAMPLE_INCLUDE_DIR libswresample/swresample.h PATHS ${SWRESAMPLE_INCLUDE_DIRS} NO_DEFAULT_PATH)
    find_library(SWRESAMPLE_LIBRARY swresample PATHS ${SWRESAMPLE_LIBRARY_DIRS} NO_DEFAULT_PATH)

    if (AVCODEC_INCLUDE_DIR AND AVCODEC_LIBRARY)
        set(AVCODEC_FOUND TRUE)
    endif (AVCODEC_INCLUDE_DIR AND AVCODEC_LIBRARY)

    if (AVFORMAT_INCLUDE_DIR AND AVFORMAT_LIBRARY)
        set(AVFORMAT_FOUND TRUE)
    endif (AVFORMAT_INCLUDE_DIR AND AVFORMAT_LIBRARY)

    if (AVUTIL_INCLUDE_DIR AND AVUTIL_LIBRARY)
        set(AVUTIL_FOUND TRUE)
    endif (AVUTIL_INCLUDE_DIR AND AVUTIL_LIBRARY)

    if (SWSCALE_INCLUDE_DIR AND SWSCALE_LIBRARY)
        set(SWSCALE_FOUND TRUE)
    endif (SWSCALE_INCLUDE_DIR AND SWSCALE_LIBRARY)

    if (SWRESAMPLE_INCLUDE_DIR AND SWRESAMPLE_LIBRARY)
        set(SWRESAMPLE_FOUND TRUE)
    endif (SWRESAMPLE_INCLUDE_DIR AND SWRESAMPLE_LIBRARY)


    #include(FindPackageHandleStandardArgs)
    #if (SWRESAMPLE_FOUND)
    #    FIND_PACKAGE_HANDLE_STANDARD_ARGS(FFmpeg DEFAULT_MSG AVUTIL_FOUND AVCODEC_FOUND AVFORMAT_FOUND SWSCALE_FOUND SWRESAMPLE_FOUND)
    #else()
    #FIND_PACKAGE_HANDLE_STANDARD_ARGS(FFmpeg DEFAULT_MSG AVUTIL_FOUND AVCODEC_FOUND AVFORMAT_FOUND SWSCALE_FOUND SWRESAMPLE_FOUND)
    #endif()
    #if (FFMPEG_FOUND)
    #    if (SWRESAMPLE_FOUND)
    #        set(FFMPEG_INCLUDE_DIRS ${AVCODEC_INCLUDE_DIR} ${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR} ${SWSCALE_INCLUDE_DIR} ${SWRESAMPLE_INCLUDE_DIR})
    #        set(FFMPEG_LIBRARIES ${AVCODEC_LIBRARY} ${AVFORMAT_LIBRARY} ${AVUTIL_LIBRARY} ${SWSCALE_LIBRARY} ${SWRESAMPLE_LIBRARY})
    #    elseif (AVRESAMPLE_FOUND)
    set(FFMPEG_INCLUDE_DIRS ${AVCODEC_INCLUDE_DIR} ${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR} ${SWSCALE_INCLUDE_DIR} ${SWRESAMPLE_INCLUDE_DIR} PARENT_SCOPE)
    set(FFMPEG_LIBRARIES ${AVCODEC_LIBRARY} ${AVFORMAT_LIBRARY} ${AVUTIL_LIBRARY} ${SWSCALE_LIBRARY} ${SWRESAMPLE_LIBRARY} PARENT_SCOPE)
    #    endif()
    #endif(FFMPEG_FOUND)
endfunction()
findFFMpegNonDefault()

message("AV files: ${AV_FILES}")

add_executable(transcode ${AV_FILES} transcode.cpp)
target_link_libraries(transcode PUBLIC ${FFMPEG_LIBRARIES})
